modules/mhs/cluster-network/opentest/route-table.tf
resource "aws_route_table" "spine" {
  vpc_id = var.mhs_vpc_id
  tags = {
    Name = "${var.environment}-${var.cluster_name}-spine-route-table"
    Environment = var.environment
    CreatedBy = var.repo_name
  }
}

resource "aws_route" "internet" {
  route_table_id = aws_route_table.spine.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.internet.id
}
