modules/mhs/cluster-network/opentest/subnet.tf
locals {
  private_subnet_cidr = cidrsubnets(var.subnet_cidr_block, 1, 1)[0]
  public_subnet_cidr = cidrsubnets(var.subnet_cidr_block, 1, 1)[1]
}

resource "aws_subnet" "opentest_private_subnet" {
  vpc_id = var.mhs_vpc_id
  availability_zone = data.aws_availability_zones.all.names[0]
  cidr_block = var.subnet_cidr_block
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.environment}-${var.cluster_name}-mhs-subnet-${data.aws_availability_zones.all.names[0]}"
    Environment = var.environment
    CreatedBy = var.repo_name
  }
}

resource "aws_route_table_association" "opentest" {
  subnet_id      = aws_subnet.opentest_subnet_private.id
  route_table_id = aws_route_table.spine.id
}

resource "aws_subnet" "opentest_subnet_public" {
  vpc_id = var.mhs_vpc_id
  availability_zone = data.aws_availability_zones.all.names[0]
  cidr_block = var.subnet_cidr_block
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.environment}-${var.cluster_name}-mhs-subnet-${data.aws_availability_zones.all.names[0]}"
    Environment = var.environment
    CreatedBy = var.repo_name
  }
}
